logs/dag_id=weather/run_id=scheduled__2023-05-23T05:01:00+00:00/task_id=create_table_weather/attempt=2.log
[2023-06-05T18:00:39.468+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: weather.create_table_weather scheduled__2023-05-23T05:01:00+00:00 [queued]>
[2023-06-05T18:00:39.513+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: weather.create_table_weather scheduled__2023-05-23T05:01:00+00:00 [queued]>
[2023-06-05T18:00:39.513+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T18:00:39.513+0000] {taskinstance.py:1283} INFO - Starting attempt 2 of 6
[2023-06-05T18:00:39.513+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-06-05T18:00:39.555+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): create_table_weather> on 2023-05-23 05:01:00+00:00
[2023-06-05T18:00:39.568+0000] {standard_task_runner.py:55} INFO - Started process 12614 to run task
[2023-06-05T18:00:39.579+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'weather', 'create_table_weather', 'scheduled__2023-05-23T05:01:00+00:00', '--job-id', '813', '--raw', '--subdir', 'DAGS_FOLDER/weather_DAG.py', '--cfg-path', '/tmp/tmpwvfuni0c']
[2023-06-05T18:00:39.581+0000] {standard_task_runner.py:83} INFO - Job 813: Subtask create_table_weather
[2023-06-05T18:00:39.688+0000] {task_command.py:388} INFO - Running <TaskInstance: weather.create_table_weather scheduled__2023-05-23T05:01:00+00:00 [running]> on host 05172cfd5782
[2023-06-05T18:00:39.836+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=fox
AIRFLOW_CTX_DAG_ID=weather
AIRFLOW_CTX_TASK_ID=create_table_weather
AIRFLOW_CTX_EXECUTION_DATE=2023-05-23T05:01:00+00:00
AIRFLOW_CTX_TRY_NUMBER=2
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-05-23T05:01:00+00:00
[2023-06-05T18:00:39.837+0000] {sql.py:254} INFO - Executing: 
                CREATE TABLE IF NOT EXISTS weather_data (
                    date VARCHAR(200),
                    current_temperature"(C)" VARCHAR(200),
                    feels_like"(C)" VARCHAR(200),
                    sky VARCHAR(200),
                    chance_of_precipitation"(%)" VARCHAR(200),
                    wind"(mps)" VARCHAR(200), 
                    pressure"(mm)" VARCHAR(200), 
                    uv_index VARCHAR(200), 
                    humidity"(%)" VARCHAR(200), 
                    precipitation"(mm)' VARCHAR(200)
            )
            
[2023-06-05T18:00:39.851+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T18:00:40.518+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-05T18:00:40.530+0000] {sql.py:375} INFO - Running statement: 
                CREATE TABLE IF NOT EXISTS weather_data (
                    date VARCHAR(200),
                    current_temperature"(C)" VARCHAR(200),
                    feels_like"(C)" VARCHAR(200),
                    sky VARCHAR(200),
                    chance_of_precipitation"(%)" VARCHAR(200),
                    wind"(mps)" VARCHAR(200), 
                    pressure"(mm)" VARCHAR(200), 
                    uv_index VARCHAR(200), 
                    humidity"(%)" VARCHAR(200), 
                    precipitation"(mm)' VARCHAR(200)
            )
            , parameters: None
[2023-06-05T18:00:40.531+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "VARCHAR"
LINE 4:                     current_temperature"(C)" VARCHAR(200),
                                                     ^

[2023-06-05T18:00:40.550+0000] {taskinstance.py:1326} INFO - Marking task as UP_FOR_RETRY. dag_id=weather, task_id=create_table_weather, execution_date=20230523T050100, start_date=20230605T180039, end_date=20230605T180040
[2023-06-05T18:00:40.575+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 813 for task create_table_weather (syntax error at or near "VARCHAR"
LINE 4:                     current_temperature"(C)" VARCHAR(200),
                                                     ^
; 12614)
[2023-06-05T18:00:40.646+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-06-05T18:00:40.886+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
